--- a/games.html
+++ b/games.html
@@ -17,11 +17,21 @@
             display: block;
         }
     </style>
+    <script>
+        window.addEventListener("load", () => {
+
+            //after 10 seconds go to the next page
+            setTimeout(function () {
+                window.location = "index.html";
+            }, 10000);
+
+        });
+    </script>
 </head>
 
 <body>
     <div class="gif-container">
-        <img src="assets/startups/1.gif" alt="GIF 1">
+        <!-- <img src="assets/startups/1.gif" alt="GIF 1">
         <img src="assets/startups/2.gif" alt="GIF 2">
         <img src="assets/startups/3.gif" alt="GIF 3">
         <img src="assets/startups/4.gif" alt="GIF 4">
@@ -35,7 +45,7 @@
         <img src="assets/startups/12.gif" alt="GIF 12">
         <img src="assets/startups/13.gif" alt="GIF 13">
         <img src="assets/startups/14.gif" alt="GIF 14">
-        <img src="assets/startups/15.gif" alt="GIF 15">
+        <img src="assets/startups/15.gif" alt="GIF 15"> -->
     </div>
 </body>
 
