--- a/faces.html
+++ b/faces.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-    <script src="sketch1.js"></script>
+    <script src="js/sketch1.js"></script>
     <div id="personImage" style="display: flex;
     margin-top: 10%;
     flex-direction: column;
