--- a/kaleidoscope.html
+++ b/kaleidoscope.html
@@ -25,11 +25,12 @@
 </head>
 
 <body>
-    <script src="sketch2.js"></script>
+    <script src="js/sketch2.js"></script>
     <button id="continueButton" onclick="location.href='games.html'" style="
     position:absolute;
     bottom:30px;
     left: 50%;
+    z-index: -1;
     transform: translate(-50%, 0);
     width: 200px;
     margin-inline:auto;
