--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         An interactive technology film project by Sean Shmulevich</p>
     </h1>
 
-    <a href="pages/pointillism.html">
+    <a href="pointillism.html">
       <div id="playButton" style="margin-inline:auto;display:flex;align-items: center;justify-content:center;width:15%;border-radius: 20px;"
         height="50px" width="50px">
         <svg xmlns="http://www.w3.org/2000/svg" height="50px" width="50px" viewBox="0 0 64 64">
