--- a/kaleidoscope.html
+++ b/kaleidoscope.html
@@ -26,7 +26,7 @@
 
 <body>
     <script src="js/sketch2.js"></script>
-    <button id="continueButton" onclick="location.href='games.html'" style="
+    <button id="continueButton" onclick="location.href='sound.html'" style="
     position:absolute;
     bottom:30px;
     left: 50%;
