--- a/sound.html
+++ b/sound.html
@@ -21,7 +21,7 @@
             display: block;
             margin-inline: auto;
             border: 10px solid;
-            margin-top: 50px;
+            margin-top: 20px;
         }
     </style>
     <!-- <script>
@@ -40,7 +40,18 @@
 
     <script src="js/sketch3.js"></script>
 
-    <button id="continueButton" onclick="location.href='index.html'" style="
+    <h1 style="
+    font-family: 'Impact', sans-serif;
+    font-size: 3rem;
+    color: #fff;
+    margin-top:10px;
+    text-shadow: 3px 3px 0px rgba(255, 60, 60, 0.7), -3px -3px 0px rgba(0, 0, 255, 0.6);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    filter: drop-shadow(0px 3px 5px rgba(0, 0, 0, 0.8));
+  ">CLAP!</h1>
+
+        <button id="continueButton" onclick="location.href='pong.html'" style="
     position:absolute;
     bottom:30px;
     left: 50%;
@@ -51,11 +62,11 @@
     border-radius: 70px;
     font-family: 'Impact', sans-serif;
     font-size: 3rem;">
-        Continue
-    </button>
+            Continue
+        </button>
 
-    <div class="gif-container">
-        <!-- <img src="assets/startups/1.gif" alt="GIF 1">
+        <div class="gif-container">
+            <!-- <img src="assets/startups/1.gif" alt="GIF 1">
         <img src="assets/startups/2.gif" alt="GIF 2">
         <img src="assets/startups/3.gif" alt="GIF 3">
         <img src="assets/startups/4.gif" alt="GIF 4">
@@ -70,7 +81,7 @@
         <img src="assets/startups/13.gif" alt="GIF 13">
         <img src="assets/startups/14.gif" alt="GIF 14">
         <img src="assets/startups/15.gif" alt="GIF 15"> -->
-    </div>
+        </div>
 </body>
 
 </html>
