--- a/matrix.html
+++ b/matrix.html
@@ -28,7 +28,7 @@
 
 <body>
     <script src="js/sketch5.js"></script>
-    <button id="continueButton" onclick="location.href='matrix.html'" style="
+    <button id="continueButton" onclick="location.href='index.html'" style="
     position:absolute;
     bottom:30px;
     left: 50%;
@@ -39,7 +39,7 @@
     border-radius: 70px;
     font-family: 'Impact', sans-serif;
     font-size: 3rem;">
-        Continue
+       The End 
     </button>
 </body>
 
